# ImGuiSkeleton

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: AppState.cpp  AppState.h  Main.cpp  Window.cpp  Window.h
src/Common/: File.cpp  File.h  Time.h
src/Widgets/: Widget.cpp  Widget.h
src/Widgets/ImGui/: GLPreviewWindow.cpp  GLPreviewWindow.h  ImGuiWidget.cpp  ImGuiWidget.h  MenuBar.cpp  MenuBar.h
